share plz project

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,12 +1,11 @@
 {
-    "Projects": [
-        {
+    "Projects": [{
             "title": "Microsoft Health & Security",
             "image": "healthcare.png",
             "url": "https://discover.microsoft.com/empower-your-clinicians-with-microsoft-teams/",
             "para1": "para 1",
             "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#99a74e'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
-        
+
         },
         {
             "title": "Sony Creator Space NYC",
@@ -21,7 +20,7 @@
             "url": "https://discover.microsoft.com/data-security-privacy-and-compliance-for-healthcare/#/",
             "para1": "para 1",
             "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
-        
+
         },
         {
             "title": "Nintex Guided Demo",
@@ -29,8 +28,13 @@
             "url": "https://www.nintex.com/guided-tour/#/manage/process-management/intro/",
             "para1": "para 1",
             "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#f36e21'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
-
-            
+        },
+        {
+            "title": "SharePlz",
+            "image": "shareplz.png",
+            "url": "https://github.com/daltlc/amplify-react-native-SharePlz",
+            "para1": "para 1",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
         },
         {
             "title": "Concur Guided Demo",
