--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -34,7 +34,7 @@
             "image": "shareplz.png",
             "url": "https://github.com/daltlc/amplify-react-native-SharePlz",
             "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#ffc725'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
         },
         {
             "title": "Concur Guided Demo",
