--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -31,7 +31,7 @@
         },
         {
             "title": "SharePlz",
-            "image": "shareplz.png",
+            "image": "sharePlzLogo.png",
             "url": "https://github.com/daltlc/amplify-react-native-SharePlz",
             "para1": "para 1",
             "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#ffc725'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
