changed order of projects

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,6 @@
 {
     "Projects": [{
-            "title": "SharePlz",
+            "title": "SharePlz - Project",
             "image": "sharepleaselogo.png",
             "url": "https://github.com/daltlc/amplify-react-native-SharePlz",
             "para1": "para 1",
