--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -13,7 +13,7 @@
             "image": "localforlife.png",
             "url": "https://www.sealocalforlife.com",
             "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#ffc725'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
         },
         {
             "title": "Sony Creator Space NYC",
