--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "gatsby": "^2.15.28",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-postcss": "^2.3.2",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sass": "^2.1.17",
     "node-sass": "^4.12.0",
+    "postcss-import": "^12.0.1",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^1.4.6"
   },
   "keywords": [
     "gatsby"
