--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,59 +4,59 @@
             "title": "Microsoft Health & Security",
             "image": "healthcare.png",
             "url": "https://discover.microsoft.com/empower-your-clinicians-with-microsoft-teams/",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#99a74e'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
+            "para1": "Brochure style Vue app for Microsoft, to showcase upcoming health and security technologies.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#00eea7'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
 
         },
         {
             "title": "Seattle - Localforlife",
             "image": "localforlife.png",
             "url": "https://www.sealocalforlife.com",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
+            "para1": "Full-Stack Severless application designed to help local businesses during the COVID pandamic.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#37a2fd'>React, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
         },
         {
             "title": "Sony Creator Space NYC",
             "image": "sonyHorizontal.png",
             "url": "https://alphauniverse.com/creative-space-nyc/",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#f36e21'>HTML5, SASS, JavaScript, jQuery, Bootstrap, Zesty CMS</span>"
+            "para1": "Splash page for Sony's Alpha Universe, to showcase the Sony Creator Space Event in NYC.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#00eea7'>HTML5, SASS, JavaScript, jQuery, Bootstrap, Zesty CMS</span>"
         },
         {
             "title": "Microsoft Health Compliance",
             "image": "complianceHorizontal.png",
             "url": "https://discover.microsoft.com/data-security-privacy-and-compliance-for-healthcare/#/",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
+            "para1": "Brochure style Vue app for Microsoft, to showcase upcoming healthcare technologies.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#37a2fd'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
 
         },
         {
             "title": "SharePlz - Project",
             "image": "sharepleaselogo.png",
             "url": "https://github.com/daltlc/amplify-react-native-SharePlz",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#ffc725'>React Native, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
+            "para1": "Full-Stack Serverless applcation designed to help neighborhoods share goods if shortages of crucial items were to concur",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#00eea7'>React Native, SASS, AWS Amplify, GraphQL, AppSync, AWS Cognito, Webpack, Bootstrap</span>"
         },
         {
             "title": "Nintex Guided Demo",
             "image": "nintexHorizontal.png",
             "url": "https://www.nintex.com/guided-tour/#/manage/process-management/intro/",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#f36e21'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
+            "para1": "Added features on top of excisting Vue applcation, including state management / progress tracking and other design pieces.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#37a2fd'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
         },
         {
             "title": "Concur Guided Demo",
             "image": "concurHorizontal.png",
             "url": "https://www.concur.com/self-guided-demo-expense#",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#ffc725'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
+            "para1": "Localized entire project in 22 different languages with the help of Offshore teams. Managed teams for translations.",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#00eea7'>Vue, SASS, JavaScript, Webpack, Bootstrap, Wordpress</span>"
         },
         {
             "title": "Lavish Entertainment, Inc.",
             "image": "lavish_logo_modern-min.png",
             "url": "https://www.lavishentertainmentinc.com",
-            "para1": "para 1",
-            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#0178d4'>Vue, SASS, JavaScript, Webpack, Bootstrap</span>"
+            "para1": "Freelancing project for an Entertainment Agency in Las Vegas, Nevada. ",
+            "para2": "<strong>Tech used:&nbsp;</strong> <span style='color:#37a2fd'>Vue, SASS, JavaScript, Webpack, Bootstrap</span>"
         }
     ]
 }
